@@ -10,6 +10,7 @@
 - Fixed playback ending too quickly
 - Allowed moving notes by octave with shift+up/down
 - Allowed moving notes by one measure with shift+left/right
+- G clef is now rendered (roughly) on printed scores
 
 1.2b4
 - Switched to unified (native) toolbar on mac  (WARNING: requires patching wxWidgets, see docs)
